--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -44,7 +44,7 @@
   pdf={example_pdf.pdf},
   altmetric={248277},
   dimensions={true},
-  selected={true}
+  selected={false}
 }
 
 @article{einstein1905molekularkinetischen,
@@ -81,4 +81,55 @@
   year={1967},
   publisher={Vision},
   preview={wave-mechanics.gif}
+}
+
+@inproceedings{khattak2023maple,
+  title={Maple: Multi-modal prompt learning},
+  author={Khattak, Muhammad Uzair and Rasheed, Hanoona and Maaz, Muhammad and Khan, Salman and Khan, Fahad Shahbaz},
+  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  pages={19113--19122},
+  year={2023}
+}
+
+@inproceedings{rasheed2023fine,
+  title={Fine-tuned clip models are efficient video learners},
+  author={Rasheed, Hanoona and Khattak, Muhammad Uzair and Maaz, Muhammad and Khan, Salman and Khan, Fahad Shahbaz},
+  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  pages={6545--6554},
+  year={2023},
+  selected={true}
+}
+
+@article{bangalath2022bridging,
+  title={Bridging the gap between object and image-level representations for open-vocabulary detection},
+  author={Bangalath, Hanoona and Maaz, Muhammad and Khattak, Muhammad Uzair and Khan, Salman H and Shahbaz Khan, Fahad},
+  journal={Advances in Neural Information Processing Systems},
+  volume={35},
+  pages={33781--33794},
+  year={2022},
+  selected={true}
+}
+
+@article{khattak2023self,
+  title={Self-regulating Prompts: Foundational Model Adaptation without Forgetting},
+  author={Khattak, Muhammad Uzair and Wasim, Syed Talal and Naseer, Muzammal and Khan, Salman and Yang, Ming-Hsuan and Khan, Fahad Shahbaz},
+  journal={arXiv preprint arXiv:2307.06948},
+  year={2023},
+  selected={true}
+}
+
+@article{wasim2023video,
+  title={Video-FocalNets: Spatio-Temporal Focal Modulation for Video Action Recognition},
+  author={Wasim, Syed Talal and Khattak, Muhammad Uzair and Naseer, Muzammal and Khan, Salman and Shah, Mubarak and Khan, Fahad Shahbaz},
+  journal={arXiv preprint arXiv:2307.06947},
+  year={2023},
+  selected={true}
+}
+
+@article{khaliq2022investigating,
+  title={Investigating and Improving Common Loop Closure Failures in Visual SLAM},
+  author={Khaliq, Saran and Anjum, Muhammad Latif and Hussain, Wajahat and Khattak, Muhammad Uzair and Rasool, Momen},
+  journal={https://doi.org/10.21203/rs.3.rs-1822521/v1},
+  year={2022},
+  selected={true}
 }
