--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -112,11 +112,29 @@
 
 @article{khattak2023self,
   title={Self-regulating Prompts: Foundational Model Adaptation without Forgetting},
-  author={Khattak, Muhammad Uzair and Wasim, Syed Talal and Naseer, Muzammal and Khan, Salman and Yang, Ming-Hsuan and Khan, Fahad Shahbaz},
+  author={Khattak*, Muhammad Uzair and Wasim*, Syed Talal and Naseer, Muzammal and Khan, Salman and Yang, Ming-Hsuan and Khan, Fahad Shahbaz},
   journal={arXiv preprint arXiv:2307.06948},
   year={2023},
-  selected={true}
+  selected={true},
+pdf={https://arxiv.org/pdf/2307.06948.pdf},
+code={https://github.com/muzairkhattak/PromptSRC},
+website={https://muzairkhattak.github.io/PromptSRC/},
+  bibtex_show={true}
 }
+
+@article{patrick2021keeping,
+  bibtex_show={true},
+  preview={motionformer.png},
+  selected={false},
+  highlight={Oral},
+  pdf={https://arxiv.org/pdf/2106.05392},
+  code={https://github.com/facebookresearch/Motionformer},
+    title = {Keeping Your Eye on the Ball: Trajectory Attention in Video Transformers},
+    author = {Mandela Patrick* and Dylan Campbell* and Yuki M. Asano* and Ishan Misra and Florian Metze and Christoph Feichtenhofer and Andrea Vedaldi and João F. Henriques},
+    journal = {NeurIPS},
+    year = {2021},
+}
+
 
 @article{wasim2023video,
   title={Video-FocalNets: Spatio-Temporal Focal Modulation for Video Action Recognition},
@@ -133,3 +151,5 @@
   year={2022},
   selected={true}
 }
+
+
