--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,103 +1,33 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
-}
-
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
-}
-
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  selected={false}
-}
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
-}
 
 @inproceedings{khattak2023maple,
   title={Maple: Multi-modal prompt learning},
   author={Khattak, Muhammad Uzair and Rasheed, Hanoona and Maaz, Muhammad and Khan, Salman and Khan, Fahad Shahbaz},
   booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
   pages={19113--19122},
-  year={2023}
+  year={2023},
+    selected={true},
+  pdf={https://arxiv.org/pdf/2210.03117.pdf},
+code={https://github.com/muzairkhattak/multimodal-prompt-learning},
+website={https://muzairkhattak.github.io/multimodal-prompt-learning/},
+  bibtex_show={true},
+  preview={maple_preview.png}
 }
 
 @inproceedings{rasheed2023fine,
   title={Fine-tuned clip models are efficient video learners},
-  author={Rasheed, Hanoona and Khattak, Muhammad Uzair and Maaz, Muhammad and Khan, Salman and Khan, Fahad Shahbaz},
+  author={Rasheed*, Hanoona and Khattak*, Muhammad Uzair and Maaz, Muhammad and Khan, Salman and Khan, Fahad Shahbaz},
   booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
   pages={6545--6554},
   year={2023},
-  selected={true}
+  selected={true},
+    pdf={https://arxiv.org/pdf/2212.03640.pdf},
+code={https://github.com/muzairkhattak/ViFi-CLIP},
+website={https://muzairkhattak.github.io/ViFi-CLIP/},
+  bibtex_show={true},
+  preview={vificlip_preview.png}
 }
 
 @article{bangalath2022bridging,
@@ -107,7 +37,12 @@
   volume={35},
   pages={33781--33794},
   year={2022},
-  selected={true}
+  selected={true},
+      pdf={https://arxiv.org/pdf/2207.03482.pdf},
+code={https://github.com/hanoonaR/object-centric-ovd},
+website={https://hanoonar.github.io/object-centric-ovd/},
+  bibtex_show={true},
+  preview={ovd_preview.png}
 }
 
 @article{khattak2023self,
@@ -119,37 +54,32 @@
 pdf={https://arxiv.org/pdf/2307.06948.pdf},
 code={https://github.com/muzairkhattak/PromptSRC},
 website={https://muzairkhattak.github.io/PromptSRC/},
-  bibtex_show={true}
-}
-
-@article{patrick2021keeping,
   bibtex_show={true},
-  preview={motionformer.png},
-  selected={false},
-  highlight={Oral},
-  pdf={https://arxiv.org/pdf/2106.05392},
-  code={https://github.com/facebookresearch/Motionformer},
-    title = {Keeping Your Eye on the Ball: Trajectory Attention in Video Transformers},
-    author = {Mandela Patrick* and Dylan Campbell* and Yuki M. Asano* and Ishan Misra and Florian Metze and Christoph Feichtenhofer and Andrea Vedaldi and João F. Henriques},
-    journal = {NeurIPS},
-    year = {2021},
+  preview={promptsrc_preview.png}
 }
 
 
 @article{wasim2023video,
   title={Video-FocalNets: Spatio-Temporal Focal Modulation for Video Action Recognition},
-  author={Wasim, Syed Talal and Khattak, Muhammad Uzair and Naseer, Muzammal and Khan, Salman and Shah, Mubarak and Khan, Fahad Shahbaz},
+  author={Wasim*, Syed Talal and Khattak*, Muhammad Uzair and Naseer, Muzammal and Khan, Salman and Shah, Mubarak and Khan, Fahad Shahbaz},
   journal={arXiv preprint arXiv:2307.06947},
   year={2023},
-  selected={true}
+  selected={true},
+  pdf={https://arxiv.org/pdf/2307.06947.pdf},
+code={https://github.com/TalalWasim/Video-FocalNets},
+website={https://talalwasim.github.io/Video-FocalNets/},
+  bibtex_show={true},
+  preview={focalnets_preview.png}
 }
 
 @article{khaliq2022investigating,
   title={Investigating and Improving Common Loop Closure Failures in Visual SLAM},
-  author={Khaliq, Saran and Anjum, Muhammad Latif and Hussain, Wajahat and Khattak, Muhammad Uzair and Rasool, Momen},
-  journal={https://doi.org/10.21203/rs.3.rs-1822521/v1},
+  author = {Mandela Patrick* and Dylan Campbell* and Yuki M. Asano* and Ishan Misra and Florian Metze and Christoph Feichtenhofer and Andrea Vedaldi and João F. Henriques},
+  journal={Autonomous Robots},
   year={2022},
-  selected={true}
+  selected={true},
+  preview={loopclosure_preview.png},
+    pdf={https://assets.researchsquare.com/files/rs-1822521/v1_covered.pdf?c=1657904505}
 }
 
 
