--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -74,12 +74,12 @@ website={https://talalwasim.github.io/Video-FocalNets/},
 
 @article{khaliq2022investigating,
   title={Investigating and Improving Common Loop Closure Failures in Visual SLAM},
-  author = {Mandela Patrick* and Dylan Campbell* and Yuki M. Asano* and Ishan Misra and Florian Metze and Christoph Feichtenhofer and Andrea Vedaldi and João F. Henriques},
+  author={Khaliq, Saran and Anjum, Muhammad Latif and Hussain, Wajahat and Khattak, Muhammad Uzair and Rasool, Momen},
   journal={Autonomous Robots},
   year={2022},
   selected={true},
   preview={loopclosure_preview.png},
-    pdf={https://assets.researchsquare.com/files/rs-1822521/v1_covered.pdf?c=1657904505}
+  pdf={https://assets.researchsquare.com/files/rs-1822521/v1_covered.pdf?c=1657904505}
 }
 
 
