--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -32,7 +32,7 @@ website={https://muzairkhattak.github.io/ViFi-CLIP/},
 
 @article{bangalath2022bridging,
   title={Bridging the gap between object and image-level representations for open-vocabulary detection},
-  author={Bangalath, Hanoona and Maaz, Muhammad and Khattak, Muhammad Uzair and Khan, Salman H and Shahbaz Khan, Fahad},
+  author={Bangalath*, Hanoona and Maaz*, Muhammad and Khattak, Muhammad Uzair and Khan, Salman H and Shahbaz Khan, Fahad},
   journal={Advances in Neural Information Processing Systems},
   volume={35},
   pages={33781--33794},
