updated bibtext and added new news

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -45,11 +45,13 @@ website={https://hanoonar.github.io/object-centric-ovd/},
   preview={ovd_preview.png}
 }
 
-@article{khattak2023self,
+@inproceedings{Khattak_2023_ICCV,
   title={Self-regulating Prompts: Foundational Model Adaptation without Forgetting},
   author={Khattak*, Muhammad Uzair and Wasim*, Syed Talal and Naseer, Muzammal and Khan, Salman and Yang, Ming-Hsuan and Khan, Fahad Shahbaz},
-  journal={arXiv preprint arXiv:2307.06948},
+  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  pages={15190-15200},
   year={2023},
+  month={October},
   selected={true},
 pdf={https://arxiv.org/pdf/2307.06948.pdf},
 code={https://github.com/muzairkhattak/PromptSRC},
@@ -58,19 +60,21 @@ website={https://muzairkhattak.github.io/PromptSRC/},
   preview={promptsrc_preview.png}
 }
 
-
-@article{wasim2023video,
-  title={Video-FocalNets: Spatio-Temporal Focal Modulation for Video Action Recognition},
-  author={Wasim*, Syed Talal and Khattak*, Muhammad Uzair and Naseer, Muzammal and Khan, Salman and Shah, Mubarak and Khan, Fahad Shahbaz},
-  journal={arXiv preprint arXiv:2307.06947},
-  year={2023},
-  selected={true},
+@InProceedings{Wasim_2023_ICCV,
+    author    = {Wasim, Syed Talal and Khattak, Muhammad Uzair and Naseer, Muzammal and Khan, Salman and Shah, Mubarak and Khan, Fahad Shahbaz},
+    title     = {Video-FocalNets: Spatio-Temporal Focal Modulation for Video Action Recognition},
+    booktitle = {Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV)},
+    month     = {October},
+    year      = {2023},
+    pages     = {13778-13789},
+      selected={true},
   pdf={https://arxiv.org/pdf/2307.06947.pdf},
 code={https://github.com/TalalWasim/Video-FocalNets},
 website={https://talalwasim.github.io/Video-FocalNets/},
   bibtex_show={true},
   preview={focalnets_preview.png}
 }
+
 
 @article{khaliq2022investigating,
   title={Investigating and Improving Common Loop Closure Failures in Visual SLAM},
