--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -16,6 +16,21 @@ website={https://muzairkhattak.github.io/multimodal-prompt-learning/},
   preview={maple_preview.png}
 }
 
+@article{hassan2023align,
+  title={Align Your Prompts: Test-Time Prompting with Distribution Alignment for Zero-Shot Generalization},
+  author={Hassan, Jameel and Gani, Hanan and Hussein, Noor and Khattak+, Muhammad Uzair and Naseer, Muzammal and Khan, Fahad Shahbaz and Khan, Salman},
+  journal={Advances in Neural Information Processing Systems},
+  year={2023}
+      selected={true},
+  pdf={https://arxiv.org/pdf/2311.01459.pdf},
+code={https://github.com/jameelhassan/PromptAlign},
+website={https://jameelhassan.github.io/promptalign/},
+  bibtex_show={true},
+  preview={promptalign_preview.png}
+}
+
+
+
 @inproceedings{rasheed2023fine,
   title={Fine-tuned clip models are efficient video learners},
   author={Rasheed*, Hanoona and Khattak*, Muhammad Uzair and Maaz, Muhammad and Khan, Salman and Khan, Fahad Shahbaz},
@@ -61,7 +76,7 @@ website={https://muzairkhattak.github.io/PromptSRC/},
 }
 
 @InProceedings{Wasim_2023_ICCV,
-    author    = {Wasim, Syed Talal and Khattak, Muhammad Uzair and Naseer, Muzammal and Khan, Salman and Shah, Mubarak and Khan, Fahad Shahbaz},
+    author    = {Wasim*, Syed Talal and Khattak*, Muhammad Uzair and Naseer, Muzammal and Khan, Salman and Shah, Mubarak and Khan, Fahad Shahbaz},
     title     = {Video-FocalNets: Spatio-Temporal Focal Modulation for Video Action Recognition},
     booktitle = {Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV)},
     month     = {October},
