--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -20,7 +20,7 @@ website={https://muzairkhattak.github.io/multimodal-prompt-learning/},
   title={Align Your Prompts: Test-Time Prompting with Distribution Alignment for Zero-Shot Generalization},
   author={Hassan, Jameel and Gani, Hanan and Hussein, Noor and Khattak+, Muhammad Uzair and Naseer, Muzammal and Khan, Fahad Shahbaz and Khan, Salman},
   journal={Advances in Neural Information Processing Systems},
-  year={2023}
+  year={2023},
       selected={true},
   pdf={https://arxiv.org/pdf/2311.01459.pdf},
 code={https://github.com/jameelhassan/PromptAlign},
