--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,20 @@
 ---
 ---
 
+@article{Khattak2024ProText,
+  title={Learning to Prompt with Text Only Supervision for Vision-Language Models},
+  author={khattak, Muhammad Uzair and Naeem, Muhammad Ferjad and Muzzamal, Naseer and Gool, Luc Van and Tombari, Federico},
+  journal={arXiv:2401.02418},
+  year={2024},
+      selected={true},
+  pdf={https://arxiv.org/pdf/2401.02418.pdf},
+code={https://github.com/muzairkhattak/ProText},
+website={https://muzairkhattak.github.io/ProText/},
+  bibtex_show={true},
+  preview={protext_preview.png}
+}
+
+
 
 @inproceedings{khattak2023maple,
   title={Maple: Multi-modal prompt learning},
