--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,15 +2,16 @@
 ---
 
 @article{khattak2024complex,
-  title={Complex Video Reasoning and Robustness Evaluation Suite for Video-LMMs},
-  author={Khattak, Muhammad Uzair and Naeem, Muhammad Ferjad and Hassan, Jameel and Naseer, Muzammal and Tombari, Federico and Khan, Fahad Shahbaz and Khan, Salman},
-  journal={arXiv preprint arXiv:2405.03690},
-  year={2024},
-    pdf={https://arxiv.org/pdf/2405.03690},
-code={https://github.com/mbzuai-oryx/CVRR-Evaluation-Suite/},
-website={https://mbzuai-oryx.github.io/CVRR-Evaluation-Suite/},
-  bibtex_show={true},
-  preview={cvrres_preview.png}
+  author    = {Khattak, Muhammad Uzair and Naeem, Muhammad Ferjad and Hassan, Jameel and Naseer, Muzammal and Tombari, Federico and Khan, Fahad Shahbaz and Khan, Salman},
+  title     = {Complex Video Reasoning and Robustness Evaluation Suite for Video-LMMs},
+  journal   = {arXiv preprint arXiv:2405.03690},
+  year      = {2024},
+  selected={true},
+  pdf       = {https://arxiv.org/pdf/2405.03690},
+  code      = {https://github.com/mbzuai-oryx/CVRR-Evaluation-Suite/},
+  website   = {https://mbzuai-oryx.github.io/CVRR-Evaluation-Suite/},
+  bibtex_show = {true},
+  preview   = {cvrres_preview.png}
 }
 
 
