--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,7 @@
 
 @article{khattak2024complex,
   author    = {Khattak, Muhammad Uzair and Naeem, Muhammad Ferjad and Hassan, Jameel and Naseer, Muzammal and Tombari, Federico and Khan, Fahad Shahbaz and Khan, Salman},
-  title     = {Complex Video Reasoning and Robustness Evaluation Suite for Video-LMMs},
+  title     = {How Good is my Video LMM? Complex Video Reasoning and Robustness Evaluation Suite for Video-LMMs},
   journal   = {arXiv preprint arXiv:2405.03690},
   year      = {2024},
   selected={true},
