--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,16 @@
 ---
 ---
+@article{khattak2024unimed,
+  author    = {Khattak, Muhammad Uzair and Kunhimon, Shahina and Naseer, Muzammal and Khan, Salman and Khan, Fahad Shahbaz},
+  title     = {UniMed-CLIP: Towards a Unified Image-Text Pretraining Paradigm for Diverse Medical Imaging Modalities},
+  journal   = {arXiv preprint arXiv:2412.10372},
+  year      = {2024},
+  selected={true},
+  pdf       = {https://arxiv.org/pdf/2412.10372},
+  code      = {https://github.com/mbzuai-oryx/UniMed-CLIP},
+  bibtex_show = {true},
+  preview   = {unimed_clip.svg}
+}
 
 @article{khattak2024complex,
   author    = {Khattak, Muhammad Uzair and Naeem, Muhammad Ferjad and Hassan, Jameel and Naseer, Muzammal and Tombari, Federico and Khan, Fahad Shahbaz and Khan, Salman},
