--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,7 @@
 ---
 ---
 @article{khattak2024unimed,
-  author    = {Khattak, Muhammad Uzair and Kunhimon, Shahina and Naseer, Muzammal and Khan, Salman and Khan, Fahad Shahbaz},
+  author    = {Khattak*, Muhammad Uzair and Kunhimon*, Shahina and Naseer, Muzammal and Khan, Salman and Khan, Fahad Shahbaz},
   title     = {UniMed-CLIP: Towards a Unified Image-Text Pretraining Paradigm for Diverse Medical Imaging Modalities},
   journal   = {arXiv preprint arXiv:2412.10372},
   year      = {2024},
